Changes to styles file
Added background color and hover effects.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a href="#" class="nav-links">Credits</a>
       <a href="#" class="nav-links">More</a>
       <a href="javascript:void(0);" class="nav-link trigram" onclick="navToggle()">&#9776;</a>
+
     </nav>
     <div class="container">
       <div class="mySlides">
@@ -87,7 +88,7 @@
             <div class="modal-content">
               <span class="close">&times</span>
               <div class="modal-body">
-                <img src="img/reflection.jpg" alt="purple reflection" style="width:100%;max-width:300px;">
+                <img src="img/reflection.jpg" alt="purple reflection" style="width:100%;max-width:500px;">
                 <p>This is water reflection of the sky with a tint of purple.</p>
               </div>
             </div>
@@ -105,7 +106,7 @@
             <div class="modal-content">
               <span class="close">&times</span>
               <div class="modal-body">
-                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:300px;">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
                 <p>This is coffee.</p>
               </div>
             </div>
@@ -123,7 +124,7 @@
             <div class="modal-content">
               <span class="close">&times</span>
               <div class="modal-body">
-                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:300px;">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
                 <p>This is coffee.</p>
               </div>
             </div>
@@ -141,7 +142,7 @@
             <div class="modal-content">
               <span class="close">&times</span>
               <div class="modal-body">
-                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:300px;">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
                 <p>This is coffee.</p>
               </div>
             </div>
@@ -149,7 +150,149 @@
         </div><!--end .content-->
       </div><!--end .card-->
 
+      <div class="card five">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal5">More</button>
+          <div id="myModal5" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
 
+      <div class="card six">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal6">More</button>
+          <div id="myModal6" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
+
+      <div class="card seven">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal7">More</button>
+          <div id="myModal7" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
+
+      <div class="card eight">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal8">More</button>
+          <div id="myModal8" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
+
+      <div class="card nine">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal9">More</button>
+          <div id="myModal9" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
+
+      <div class="card ten">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal10">More</button>
+          <div id="myModal10" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
+
+      <div class="card eleven">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal11">More</button>
+          <div id="myModal11" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
+
+      <div class="card twelve">
+        <div class="thumb"></div><hr>
+        <div class="card-content">
+          <h3>Coffee Cup</h3>
+          <p>Here is picture of the grand coffee cup.</p>
+          <button class="modal-button" href="#myModal12">More</button>
+          <div id="myModal12" class="modal">
+            <div class="modal-content">
+              <span class="close">&times</span>
+              <div class="modal-body">
+                <img src="img/coffee.jpg" alt="coffee" style="width:100%;max-width:500px;">
+                <p>This is coffee.</p>
+              </div>
+            </div>
+          </div>
+        </div><!--end .content-->
+      </div><!--end .card-->
 
 
     </article>
